errors_utf8.txt
cargo :     Checking botserver v6.2.0 
(C:\Users\thipa\generalbots\gb\botserver)
No linha:1 caractere:1
+ cargo check -p botserver > errors.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Che 
   cking bo...s\gb\botserver):String) [], RemoteExc  
  eption
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0433]: failed to resolve: could not find 
`unix` in `os`
 --> botserver\src\directory\bootstrap.rs:5:14
  |
5 | use std::os::unix::fs::PermissionsExt;
  |              ^^^^ could not find `unix` in `os`
  |
note: found an item that was configured out
 --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c\
library\std\src\os\mod.rs:29:5
  |
  = note: the item is gated here
note: found an item that was configured out
 --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c\
library\std\src\os\mod.rs:84:41
  |
  = note: the item is gated here

error: cannot find macro `error` in this scope
   --> botserver\src\security\antivirus.rs:270:13
    |
270 |             error!("Failed to enable Windows 
Defender: {}", error);
    |             ^^^^^
    |
    = note: `error` is an attribute that can be used 
by the derive macros `BerAlias`, `BerSequence`, 
`BerSet`, `DerAlias`, `DerSequence`, `DerSet` and 
`Error`, you might be missing a `derive` attribute
help: consider importing one of these macros
    |
  1 + use crate::error;
    |
  1 + use log::error;
    |
  1 + use tracing::error;
    |

error: cannot find macro `error` in this scope
   --> botserver\src\security\antivirus.rs:228:13
    |
228 |             error!("Failed to disable Windows 
Defender: {}", error);
    |             ^^^^^
    |
    = note: `error` is an attribute that can be used 
by the derive macros `BerAlias`, `BerSequence`, 
`BerSet`, `DerAlias`, `DerSequence`, `DerSet` and 
`Error`, you might be missing a `derive` attribute
help: consider importing one of these macros
    |
  1 + use crate::error;
    |
  1 + use log::error;
    |
  1 + use tracing::error;
    |

warning: unused import: `Context`
 --> 
botserver\src\security\protection\installer.rs:1:14
  |
1 | use anyhow::{Context, Result};
  |              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused import: `std::fs`
 --> 
botserver\src\security\protection\installer.rs:2:5
  |
2 | use std::fs;
  |     ^^^^^^^

warning: unused import: `std::path::Path`
 --> 
botserver\src\security\protection\installer.rs:3:5
  |
3 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `error`
 --> 
botserver\src\security\protection\installer.rs:4:15
  |
4 | use tracing::{error, info, warn};
  |               ^^^^^

error[E0599]: no function or associated item named 
`check_root` found for struct `ProtectionInstaller` 
in the current scope
   --> 
botserver\src\core\package_manager\cli.rs:311:30
    |
311 |     if !ProtectionInstaller::check_root() {
    |                              ^^^^^^^^^^ 
function or associated item not found in 
`ProtectionInstaller`
    |
   ::: 
botserver\src\security\protection\installer.rs:73:1
    |
 73 | pub struct ProtectionInstaller {
    | ------------------------------ function or 
associated item `check_root` not found for this 
struct
    |
note: if you're trying to build a new 
`ProtectionInstaller`, consider using 
`ProtectionInstaller::new` which returns 
`Result<ProtectionInstaller, anyhow::Error>`
   --> 
botserver\src\security\protection\installer.rs:78:5
    |
 78 |     pub fn new() -> Result<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named 
`check_root` found for struct `ProtectionInstaller` 
in the current scope
   --> 
botserver\src\core\package_manager\cli.rs:336:30
    |
336 |     if !ProtectionInstaller::check_root() {
    |                              ^^^^^^^^^^ 
function or associated item not found in 
`ProtectionInstaller`
    |
   ::: 
botserver\src\security\protection\installer.rs:73:1
    |
 73 | pub struct ProtectionInstaller {
    | ------------------------------ function or 
associated item `check_root` not found for this 
struct
    |
note: if you're trying to build a new 
`ProtectionInstaller`, consider using 
`ProtectionInstaller::new` which returns 
`Result<ProtectionInstaller, anyhow::Error>`
   --> 
botserver\src\security\protection\installer.rs:78:5
    |
 78 |     pub fn new() -> Result<Self> {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `path`
    --> 
botserver\src\core\package_manager\facade.rs:1039:35
     |
1039 |     pub fn make_executable(&self, path: 
&std::path::Path) -> Result<()> {
     |                                   ^^^^ help: 
if this is intentional, prefix it with an 
underscore: `_path`
     |
     = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

Some errors have detailed explanations: E0433, E0599.
For more information about an error, try `rustc 
--explain E0433`.
warning: `botserver` (bin "botserver") generated 5 
warnings
error: could not compile `botserver` (bin 
"botserver") due to 5 previous errors; 5 warnings 
emitted
